deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nutanixdocs
  labels:
    app.kubernetes.io/name: nutanix-docs-matrix
    app.kubernetes.io/part-of: nutanix-docs-platform
